Update CPI Config docs to mention Stemcells
When first testing the feature and watching a couple of people try it out, it became clear that some notes about Stemcells would be helpful here.

--- a/cpi-config.html.md.erb
+++ b/cpi-config.html.md.erb
@@ -166,3 +166,11 @@ azs:
   cpi: vcenter-1b
 ...
 ```
+
+---
+## <a id='stemcells'></a> CPI Specific Stemcells
+Stemcells need to be assigned to a specific CPI and it occurs on upload. If you've already uploaded an appropriate stemcell you'll need to re-upload with `--fix`
+
+```bash
+bosh upload-stemcell .tgz --fix 
+```
