--- a/cli-int.html.md.erb
+++ b/cli-int.html.md.erb
@@ -43,13 +43,13 @@ CLI allows to provide variable values via usage of one or more of the following 
 - `--var-file=key=path` flag sets single variable value as an entire file
 
     <pre class="terminal">
-    $ cat 1.yml
+    $ cat 1.txt
     some-key
 
-    $ cat 2.yml
+    $ cat 2.txt
     some-secret
 
-    $ bosh interpolate base.yml --var-file access_key_id=1.yml --var-file access_secret_key=2.yml
+    $ bosh interpolate base.yml --var-file access_key_id=1.txt --var-file access_secret_key=2.txt
     s3_access_key_id: some-key
     s3_access_secret_key: some-secret
     </pre>
