s/communite/communicate, attempt grammar fix

--- a/links.html.md.erb
+++ b/links.html.md.erb
@@ -283,7 +283,7 @@ instance_groups:
 
 Common use cases:
 
-- job is deployed across multiple instances and each node needs to communite with each other
+- job is deployed across multiple instances and each node needs to communicate with other nodes
 
 ### <a id="custom-network"></a> Custom network linking
 
