--- a/aws-iam-instance-profiles.html.md.erb
+++ b/aws-iam-instance-profiles.html.md.erb
@@ -12,43 +12,7 @@ You may have to create one or more IAM instance profiles to limit access to AWS 
 
 ## <a id="only-director"></a> Example A: AWS CPI and Director configured with default blobstore
 
-1. Create `director` IAM role that allows `ec2:*` actions to create/delete VMs, attach/detach disks, etc. Optionally add `elasticloadbalancing:*` actions to register VMs with ELBs if you are planning to use `elbs` configuration with resource pools.
-
-    ```json
-    {
-      "Version": "2012-10-17",
-      "Statement": [{
-        "Action": [
-          "ec2:AssociateAddress",
-          "ec2:AttachVolume",
-          "ec2:CreateVolume",
-          "ec2:DeleteSnapshot",
-          "ec2:DeleteVolume",
-          "ec2:DescribeAddresses",
-          "ec2:DescribeImages",
-          "ec2:DescribeInstances",
-          "ec2:DescribeRegions",
-          "ec2:DescribeSecurityGroups",
-          "ec2:DescribeSnapshots",
-          "ec2:DescribeSubnets",
-          "ec2:DescribeVolumes",
-          "ec2:DetachVolume",
-          "ec2:CreateSnapshot",
-          "ec2:CreateTags",
-          "ec2:RunInstances",
-          "ec2:TerminateInstances",
-          "ec2:RegisterImage",
-          "ec2:DeregisterImage"
-        ],
-        "Effect": "Allow",
-        "Resource": "*"
-      },{
-        "Effect": "Allow",
-        "Action": "elasticloadbalancing:*",
-        "Resource": "*"
-      }]
-    }
-    ```
+1. Create `director` IAM role using the same policy as your existing user (see [Creating IAM Users](aws-iam-users.html)).
 
 1. Change deployment manifest for the Director to configure AWS CPI to use `director` IAM profile:
 
@@ -97,41 +61,12 @@ This configuration is similar to the previous one except that it's used when the
     }
     ```
 
-1. Create `director` IAM role with:
-
-  - `ec2:*` actions
-  - `iam:PassRole` action for allowing to create VMs with a specific IAM role
-  - `s3:*` actions for the same S3 bucket
+1. Create `director` IAM role using the same policy as your existing user (see [Creating IAM Users](aws-iam-users.html)) with the following additional policy.
 
     ```json
     {
       "Version": "2012-10-17",
       "Statement": [{
-        "Action": [
-          "ec2:AssociateAddress",
-          "ec2:AttachVolume",
-          "ec2:CreateVolume",
-          "ec2:DeleteSnapshot",
-          "ec2:DeleteVolume",
-          "ec2:DescribeAddresses",
-          "ec2:DescribeImages",
-          "ec2:DescribeInstances",
-          "ec2:DescribeRegions",
-          "ec2:DescribeSecurityGroups",
-          "ec2:DescribeSnapshots",
-          "ec2:DescribeSubnets",
-          "ec2:DescribeVolumes",
-          "ec2:DetachVolume",
-          "ec2:CreateSnapshot",
-          "ec2:CreateTags",
-          "ec2:RunInstances",
-          "ec2:TerminateInstances",
-          "ec2:RegisterImage",
-          "ec2:DeregisterImage"
-        ],
-        "Effect": "Allow",
-        "Resource": "*"
-      },{
         "Effect":"Allow",
         "Action":"iam:PassRole",
         "Resource":"arn:aws:iam::<accound_id>:role/deployed-vm"
