--- a/aws-iam-users.html.md.erb
+++ b/aws-iam-users.html.md.erb
@@ -40,45 +40,4 @@ title: Creating IAM Users
 
     <%= image_tag("images/deploy-microbosh-to-aws/add-iam-inline-policy.png") %>
 
-    For example your aws-cpi's inline policy allows EC2 and full ELB access:
-
-    ```yaml
-    {
-      "Version": "2012-10-17",
-      "Statement": [
-        {
-          "Action": [
-            "ec2:AssociateAddress",
-            "ec2:AttachVolume",
-            "ec2:CreateVolume",
-            "ec2:DeleteSnapshot",
-            "ec2:DeleteVolume",
-            "ec2:DescribeAddresses",
-            "ec2:DescribeImages",
-            "ec2:DescribeInstances",
-            "ec2:DescribeRegions",
-            "ec2:DescribeSecurityGroups",
-            "ec2:DescribeSnapshots",
-            "ec2:DescribeSubnets",
-            "ec2:DescribeVolumes",
-            "ec2:DetachVolume",
-            "ec2:CreateSnapshot",
-            "ec2:CreateTags",
-            "ec2:RunInstances",
-            "ec2:TerminateInstances",
-            "ec2:RegisterImage",
-            "ec2:DeregisterImage"
-          ],
-          "Effect": "Allow",
-          "Resource": "*"
-        },
-        {
-          "Effect": "Allow",
-          "Action": [ "elasticloadbalancing:*" ],
-          "Resource": [ "*" ]
-        }
-      ]
-    }
-    ```
-
-    <p class="note">Note: It's highly encouraged to set very restrictive policy to limit unncessary access.</p>
+    The CPI provides a [sample policy](https://github.com/cloudfoundry-incubator/bosh-aws-cpi-release/blob/master/docs/iam-policy.json) which supports all functionality provided by the CPI. Please review the policy to further limit unnecessary access for your environment.
