add hypbrid ipv6 on vsphere guide

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -146,6 +146,7 @@ See [Recent Additions and Updates](recent.html).
 ---
 ## <a id="guides"></a> Guides
 
+* [IPv6 on vSphere](guide-ipv6-on-vsphere.html)
 * Multi-CPI
   * [On AWS](guide-multi-cpi-aws.html)
 
