--- a/tips.html.md.erb
+++ b/tips.html.md.erb
@@ -79,7 +79,9 @@ Failed compiling packages > dea_next/3e95ef8425be45468e044c05cc9aa65494281ab5: A
 ', stderr: '': exit status 1 (00:03:16)
 </pre>
 
-This problem can occur if the Director is configured to use built-in blobstore and does not have enough space on its persistent disk. You can redeploy the Director with a larger persistent disk. Alternatively you can remove unused releases by running `bosh cleanup` command.
+This problem can occur if the Director is configured to use built-in blobstore and does not have enough space on its persistent disk. You can redeploy the Director with a larger persistent disk. Alternatively you can remove unused releases by running `bosh clean-up` command. 
+
+If `bosh clean-up` command fails with 500 Internal Server Error, consider removing `/var/vcap/store/director/tasks` to free up a little bit of persistent disk space before running `bosh clean-up` command again. (Deleting that directory will delete Director task debug logs.)
 
 ---
 ## <a id="director-db"></a> Debugging Director database
